[package]
name = "debug_stub_derive"
version = "0.1.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
description = "A drop-in replacement for fmt::Debug with support for non-debug members implementing members."
repository = "https://github.com/BonsaiDen/debug_stub_derive.git"
readme = "README.md"
keywords = ["debug", "trait", "proc_macro"]
categories = ["procedural-marco"]
license = "MIT/Apache-2.0"

[dependencies]
syn = { version = "0.11", features = ["visit"] }
quote = "0.3.10"

[lib]
proc-macro = true

