[package]
edition = "2018"
name = "debug_stub_derive"
version = "0.3.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]
description = "A drop-in replacement for `#[derive(Debug)]` that supports replacement values for members which do not implement `fmt::Debug.`"
repository = "https://github.com/BonsaiDen/debug_stub_derive.git"
documentation = "https://docs.rs/debug_stub_derive/0.3.0/"
readme = "README.md"
keywords = ["debug", "trait", "proc_macro"]
license = "MIT/Apache-2.0"

[dependencies]
proc-macro2 = "1.0.5"
quote = "1.0.2"
syn = { version = "1.0.5", features = ["full", "visit"] }

[lib]
name="debug_stub_derive"
proc-macro = true
